fix purpose spacing

--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -27,12 +27,14 @@
 
     article {
       @include grid-column($columns:12);
-
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
     }
 
     @media #{$medium-up} {
       margin-bottom: rem-calc(50px);
-      max-width: rem-calc(800px);
+      max-width: rem-calc(1000px);
 
       aside {
         @include grid-column($columns:4);
